react-copy-to-clipboard dependency was added and implemented

--- a/frontend/src/components/TransactionCard/TransactionCard.module.css
+++ b/frontend/src/components/TransactionCard/TransactionCard.module.css
@@ -64,7 +64,7 @@
 }
 
 .latestTransaction p[id="select"]:hover {
-    background: var(--color-main);
+    background: var(--color-text);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
